--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ $(document).ready(function () {
 
 <p><br></p>
 <p><img src="images/headshot.jpg" align="left" height="200px" width="200px" hspace="20" /></p>
-<p>Hello! I’m Kathleen Hablutzel and I’m a double major in Computer Science &amp; Statistical and Data Sciences (SDS) at Smith College (’23). I especially enjoy data visualization, data communication, and databases, and I love sharing data science enough that I built a <a href="krhablutzel.github.io/srip-bootcamp/">5-lesson introductory Data Science Bootcamp</a> for high school students.</p>
+<p>Hello! I’m Kathleen Hablutzel and I’m a double major in Computer Science &amp; Statistical and Data Sciences (SDS) at Smith College (’23). I especially enjoy data visualization, data communication, and databases, and I love sharing data science enough that I built a <a href="srip-bootcamp/">5-lesson introductory Data Science Bootcamp</a> for high school students.</p>
 <p>Currently, I volunteer as a Bluebonnet Data Fellow producing tactical field analyses for Cynthia Wallace’s Congressional campaign in North Carolina’s 9th district. I was drawn to Wallace’s campaign for the opportunity to apply data science to empower an underestimated campaign and flip a crucial Congressional district. I also research the history and politics of data analytics through Smith’s STRIDE Research Program, in conjunction with the Zollman Scholarship, Smith’s highest merit scholarship. I am most proficient in R, Python, and Java, and have experience including SQL, HTML5, and supercomputing.</p>
 <p>When I’m not coding or nerding out over cool graphs, I enjoy building props and sets with the Smith College Theater Department and exploring 16<sup>th</sup> century British politics.</p>
 
