Small tweaks to contact.Rmd and resume.Rmd

--- a/resume.html
+++ b/resume.html
@@ -317,7 +317,7 @@ $(document).ready(function () {
 <h5><em>June 2020 – Present</em>, Charlotte, NC</h5>
 <ul>
 <li>Perform tactical field analytics for Cynthia Wallace’s campaign in the NC-09 Congressional District</li>
-<li>Identified over 1000 potential donors using the Python BeautifulSoup library for web scraping</li>
+<li>Identified over 2000 potential donors using the Python BeautifulSoup4 library for web scraping</li>
 <li>Visualized demographic trends in the district using the ggplot2, sf, and leaflet packages in R</li>
 </ul>
 <p><br></p>
@@ -397,7 +397,7 @@ $(document).ready(function () {
 <div id="skills-interests" class="section level2">
 <h2>Skills &amp; Interests</h2>
 <p><strong>Programming:</strong> Python, R, Java, SQL, JavaScript, HTML5, CSS, MATLAB</p>
-<p><strong>Tools:</strong> Git/GitHub, Tableau, Gephi, LaTeX, Adobe InDesign</p>
+<p><strong>Tools:</strong> Git/GitHub, Tableau, Gephi, ArcGIS, LaTeX, Adobe InDesign</p>
 <p><strong>Interests:</strong> 16th Century British Politics, Cryptography, Theater</p>
 <p><strong>Awards:</strong> M3 Challenge Technical Computing Scholarship Award, High School Mathematical Contest in Modeling Outstanding Winner, Smith College Dean’s List</p>
 </div>
