Smaller images on contact.Rmd

--- a/contact.html
+++ b/contact.html
@@ -306,7 +306,8 @@ $(document).ready(function () {
 </div>
 
 
-<p><a href="https://github.com/krhablutzel"><img src="images/GitHub.png" align="center" height="250px" width="250px" hspace="20" /></a><a href="https://www.linkedin.com/in/kathleen-hablutzel/"><img src="images/LinkedIn.png" align="center" height="250px" width="250px" hspace="20" /></a></p>
+<p><br></p>
+<p><a href="https://github.com/krhablutzel"><img src="images/GitHub.png" align="left" height="200px" width="200px" hspace="20" /></a><a href="https://www.linkedin.com/in/kathleen-hablutzel/"><img src="images/LinkedIn.png" align="left" height="200px" width="200px" hspace="20" /></a></p>
 
 <div id="footer">
   <p>
