--- a/resume.html
+++ b/resume.html
@@ -317,7 +317,7 @@ $(document).ready(function () {
 <h5><em>June 2020 – Present</em>, Charlotte, NC</h5>
 <ul>
 <li>Perform tactical field analytics for Cynthia Wallace’s campaign in the NC-09 Congressional District</li>
-<li>Identified over 2000 potential donors using the Python BeautifulSoup4 library for web scraping</li>
+<li>Identified over 2000 potential donors from publicly available data sources using the Python BeautifulSoup4 library</li>
 <li>Visualized demographic trends in the district using the ggplot2, sf, and leaflet packages in R</li>
 </ul>
 <p><br></p>
@@ -331,7 +331,7 @@ $(document).ready(function () {
 <div id="sept.-2019-present-northampton-ma" class="section level5">
 <h5><em>Sept. 2019 – Present</em>, Northampton, MA</h5>
 <ul>
-<li>Explore the history and politics of data science, with a particular focus on the relationship between data and power</li>
+<li>Explore the history and politics of data science and the tech industry, with a particular focus on the relationship between data and power</li>
 <li>Investigate use of facial recognition systems for data-driven surveillance, with a focus on China and the US</li>
 </ul>
 <p><br></p>
@@ -345,9 +345,9 @@ $(document).ready(function () {
 <div id="june-aug.-2018-2019-2020-durham-nc-north-carolina-school-of-science-and-mathematics" class="section level5">
 <h5><em>June – Aug. 2018, 2019, 2020</em>, Durham, NC (North Carolina School of Science and Mathematics)</h5>
 <ul>
-<li>Developed 5-lesson R Data Science Bootcamp for over 25 students, including data visualization and data wrangling</li>
+<li>Developed repeatable curriculum for an R Data Science Bootcamp, including data visualization and data wrangling</li>
 <li>Led redesign of the website architecture of the Research &amp; Innovation Google Site</li>
-<li>Built Python script to format 153 student projects into HTML5 backbone to showcase within Google Site</li>
+<li>Built Python script to format 153 student projects into HTML5 website backbone for student research showcase</li>
 <li>As program participant in 2018, implemented optimization algorithms in MATLAB and built edge detection programs in Python with OpenCV through an internship at the Duke University Zavlanos robotics laboratory</li>
 </ul>
 <p><br></p>
@@ -377,7 +377,7 @@ $(document).ready(function () {
 <ul>
 <li>4.79/4.0 GPA</li>
 <li><strong>Research in Computational Science Program:</strong> Trained in R, Python, MATLAB, supercomputing, and other tools</li>
-<li><strong>Mathematics Department Award:</strong> For excellence in 10 math courses and over 12 mathematical modeling projects</li>
+<li><strong>Mathematics Department Award:</strong> For excellence in 10 math courses and numerous mathematical modeling projects</li>
 <li><strong>Mathematics Teaching Assistant:</strong> Senior leadership position tutoring peers in Multivariable Calculus and other math</li>
 </ul>
 <p><br></p>
@@ -386,20 +386,20 @@ $(document).ready(function () {
 </div>
 <div id="activities-leadership" class="section level2">
 <h2>Activities &amp; Leadership</h2>
-<p><strong>Props Internship:</strong> Spearhead props design and construction for at least 5 Smith College theatrical productions</p>
-<p><strong>Reacting to the Past:</strong> Negotiate support for historical legislation via debate and over 60 pages of speeches</p>
 <p><strong>Student Academic Advisor:</strong> Advise 53 peers on academic success and course registration</p>
-<p><strong>Publication Editor-in-Chief, Broad Street Scientific &amp; Fifth World:</strong> Formatted 2 student research journals from theme design down to the smallest details</p>
+<p><strong>Props Internship:</strong> Led props design and construction for multiple Smith College theatrical productions</p>
+<p><strong>Reacting to the Past:</strong> Negotiated support for historical legislation via debate and persuasive public speaking</p>
+<p><strong>Publication Editor-in-Chief, Broad Street Scientific &amp; Fifth World:</strong> Managed publication of 2 student research journals from concept to final production</p>
 <p><strong>TEDx Committee Chairperson:</strong> Coordinated 100-person TEDx conference with 5 speakers</p>
 <p><br></p>
 <p><br></p>
 </div>
 <div id="skills-interests" class="section level2">
 <h2>Skills &amp; Interests</h2>
-<p><strong>Programming:</strong> Python, R, Java, SQL, JavaScript, HTML5, CSS, MATLAB</p>
-<p><strong>Tools:</strong> Git/GitHub, Tableau, Gephi, ArcGIS, LaTeX, Adobe InDesign</p>
+<p><strong>Programming:</strong> Python, R, Java, SQL, JavaScript, MATLAB</p>
+<p><strong>Tools:</strong> Git/GitHub, HTML5/CSS, Tableau, Gephi, ArcGIS, LaTeX, Adobe InDesign</p>
 <p><strong>Interests:</strong> 16th Century British Politics, Cryptography, Theater</p>
-<p><strong>Awards:</strong> M3 Challenge Technical Computing Scholarship Award, High School Mathematical Contest in Modeling Outstanding Winner, Smith College Dean’s List</p>
+<p><strong>Awards:</strong> M3 Challenge Technical Computing Scholarship Award, High School Mathematical Contest in Modeling Outstanding Winner, Smith College Dean’s List, Arthur Ellis Hamm Prize Winner</p>
 </div>
 
 <div id="footer">
