Updated resume, bio, and projects

--- a/contact.html
+++ b/contact.html
@@ -279,13 +279,19 @@ $(document).ready(function () {
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    Workshops
+    Projects
      
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
       <a href="https://krhablutzel.github.io/srip-bootcamp/">R Data Science Bootcamp</a>
+    </li>
+    <li>
+      <a href="https://sophia.smith.edu/theamplifier/enter/">The Amplifier Project</a>
+    </li>
+    <li>
+      <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>
     </li>
   </ul>
 </li>
