--- a/index.html
+++ b/index.html
@@ -279,13 +279,19 @@ $(document).ready(function () {
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    Workshops
+    Projects
      
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
       <a href="https://krhablutzel.github.io/srip-bootcamp/">R Data Science Bootcamp</a>
+    </li>
+    <li>
+      <a href="https://sophia.smith.edu/theamplifier/enter/">The Amplifier Project</a>
+    </li>
+    <li>
+      <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>
     </li>
   </ul>
 </li>
@@ -306,10 +312,9 @@ $(document).ready(function () {
 
 
 <p><br></p>
-<p><img src="images/headshot.jpg" align="left" height="250px" width="250px" hspace="20" /></p>
-<p>Hello! I’m Kathleen Hablutzel and I’m a double major in Computer Science &amp; Statistical and Data Sciences (SDS) at Smith College (’23). I especially enjoy data visualization, data communication, and databases, and I love sharing data science enough that I built a <a href="srip-bootcamp/">5-lesson introductory Data Science Bootcamp</a> for high school students.</p>
-<p>Currently, I volunteer as a Bluebonnet Data Fellow producing tactical field analyses for Cynthia Wallace’s Congressional campaign in North Carolina’s 9th district. I was drawn to Wallace’s campaign for the opportunity to apply data science to empower an underestimated campaign and flip a crucial Congressional district. I also research the history and politics of data analytics through Smith’s STRIDE Research Program, in conjunction with the Zollman Scholarship, Smith’s highest merit scholarship. I am most proficient in R, Python, and Java, and have experience including SQL, HTML5, and supercomputing.</p>
-<p>When I’m not coding or nerding out over cool graphs, I enjoy building props and sets with the Smith College Theater Department and exploring 16<sup>th</sup> century British politics.</p>
+<p><img src="images/headshot-Dec-2020.jpg" align="left" height="250px" width="250px" hspace="20" /></p>
+<p>Hello! I’m Kathleen Hablutzel and I’m a double major in Computer Science &amp; Statistical and Data Sciences at Smith College (’23). I especially enjoy data visualization, data communication, and networks. I’m a software engineering intern in Smith’s Grubb Lab, where I contribute to BloomingLeaf, a web-based tool for goal-oriented requirements engineering. In the past, I’ve also volunteered as a data scientist for a Congressional campaign (Cynthia Wallace in 2020) and built an <a href="srip-bootcamp/">introductory data science course</a> data science course for high school students. In Summer 2021, I will be an intern in Bank of America’s Global Technology Sophomore Summer Analyst Program, and I can’t wait to get started!</p>
+<p>When I’m not coding or nerding out over cool graphs, I enjoy building props and sets with the Smith College Theater Department, coding cryptographic ciphers, and exploring 16<sup>th</sup> century British politics.</p>
 
 <div id="footer">
   <p>
