--- a/resume.html
+++ b/resume.html
@@ -279,13 +279,19 @@ $(document).ready(function () {
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    Workshops
+    Projects
      
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
       <a href="https://krhablutzel.github.io/srip-bootcamp/">R Data Science Bootcamp</a>
+    </li>
+    <li>
+      <a href="https://sophia.smith.edu/theamplifier/enter/">The Amplifier Project</a>
+    </li>
+    <li>
+      <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>
     </li>
   </ul>
 </li>
@@ -309,31 +315,37 @@ $(document).ready(function () {
 <div id="experience" class="section level2">
 <h2>Experience</h2>
 <p><br></p>
+<div id="stride-research-program" class="section level3">
+<h3>STRIDE Research Program</h3>
+<div id="software-engineering-research-assistant" class="section level4">
+<h4>Software Engineering Research Assistant</h4>
+<div id="sept.-2019-present-northampton-ma" class="section level5">
+<h5><em>Sept. 2019 – Present</em>, Northampton, MA</h5>
+<p><em>2020-2021 Software Engineering:</em></p>
+<ul>
+<li>Enhance front-end representations of links between intentions in web-based goal modeling tool, <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>, using Java and JavaScript with Node.js</li>
+<li>Internship in the Grubb Software Engineering Lab</li>
+</ul>
+<p><em>2019-2020 Data Science Policy:</em></p>
+<ul>
+<li>Explored the history and politics of data science and tech industry, with a particular focus on the relationship between data and power, under Professor Brent Durbin</li>
+<li>Investigated use of facial recognition systems for data-driven surveillance, with a focus on China and the US</li>
+</ul>
+</div>
+</div>
+</div>
 <div id="bluebonnet-data" class="section level3">
 <h3>Bluebonnet Data</h3>
 <div id="data-fellow-cynthia-wallace-for-congress" class="section level4">
 <h4>Data Fellow, Cynthia Wallace for Congress</h4>
-<div id="june-2020-present-charlotte-nc" class="section level5">
-<h5><em>June 2020 – Present</em>, Charlotte, NC</h5>
+<div id="june-november-2020-charlotte-nc" class="section level5">
+<h5><em>June – November 2020</em>, Charlotte, NC</h5>
 <ul>
-<li>Perform tactical field analytics for Cynthia Wallace’s campaign in the NC-09 Congressional District</li>
+<li>Performed tactical field analytics for Cynthia Wallace’s campaign in the NC-09 Congressional District</li>
 <li>Identified over 2000 potential donors from publicly available data sources using the Python BeautifulSoup4 library</li>
 <li>Visualized demographic trends in the district using the ggplot2, sf, and leaflet packages in R</li>
 </ul>
 <p><br></p>
-</div>
-</div>
-</div>
-<div id="stride-research-program" class="section level3">
-<h3>STRIDE Research Program</h3>
-<div id="research-assistant-for-professor-brent-durbin" class="section level4">
-<h4>Research Assistant for Professor Brent Durbin</h4>
-<div id="sept.-2019-present-northampton-ma" class="section level5">
-<h5><em>Sept. 2019 – Present</em>, Northampton, MA</h5>
-<ul>
-<li>Explore the history and politics of data science and the tech industry, with a particular focus on the relationship between data and power</li>
-<li>Investigate use of facial recognition systems for data-driven surveillance, with a focus on China and the US</li>
-</ul>
 <p><br></p>
 </div>
 </div>
@@ -386,6 +398,7 @@ $(document).ready(function () {
 </div>
 <div id="activities-leadership" class="section level2">
 <h2>Activities &amp; Leadership</h2>
+<p><strong>Smithies in Statistical and Data Sciences Treasurer</strong> Manage funds and organize department student/faculty lunches</p>
 <p><strong>Student Academic Advisor:</strong> Advise 53 peers on academic success and course registration</p>
 <p><strong>Props Internship:</strong> Led props design and construction for multiple Smith College theatrical productions</p>
 <p><strong>Reacting to the Past:</strong> Negotiated support for historical legislation via debate and persuasive public speaking</p>
