--- a/resume.html
+++ b/resume.html
@@ -398,7 +398,7 @@ $(document).ready(function () {
 </div>
 <div id="activities-leadership" class="section level2">
 <h2>Activities &amp; Leadership</h2>
-<p><strong>Smithies in Statistical and Data Sciences Treasurer</strong> Manage funds and organize department student/faculty lunches</p>
+<p><strong>Smithies in Statistical and Data Sciences Treasurer:</strong> Manage funds and organize department student/faculty lunches</p>
 <p><strong>Student Academic Advisor:</strong> Advise 53 peers on academic success and course registration</p>
 <p><strong>Props Internship:</strong> Led props design and construction for multiple Smith College theatrical productions</p>
 <p><strong>Reacting to the Past:</strong> Negotiated support for historical legislation via debate and persuasive public speaking</p>
