Added USCLAP Intermediate Stats Honorable Mention

--- a/contact.html
+++ b/contact.html
@@ -296,13 +296,16 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="https://krhablutzel.github.io/srip-bootcamp/">R Data Science Bootcamp</a>
+      <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>
     </li>
     <li>
       <a href="https://sophia.smith.edu/theamplifier/enter/">The Amplifier Project</a>
     </li>
     <li>
-      <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>
+      <a href="https://www.causeweb.org/usproc/usclap/2020/fall/winners">Stats Competition</a>
+    </li>
+    <li>
+      <a href="https://krhablutzel.github.io/srip-bootcamp/">R Data Science Bootcamp</a>
     </li>
   </ul>
 </li>
