--- a/resume.html
+++ b/resume.html
@@ -296,13 +296,16 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="https://krhablutzel.github.io/srip-bootcamp/">R Data Science Bootcamp</a>
+      <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>
     </li>
     <li>
       <a href="https://sophia.smith.edu/theamplifier/enter/">The Amplifier Project</a>
     </li>
     <li>
-      <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>
+      <a href="https://www.causeweb.org/usproc/usclap/2020/fall/winners">Stats Competition</a>
+    </li>
+    <li>
+      <a href="https://krhablutzel.github.io/srip-bootcamp/">R Data Science Bootcamp</a>
     </li>
   </ul>
 </li>
@@ -324,48 +327,46 @@ $(document).ready(function () {
 
 <p><br></p>
 <p>PDF version available <a href="./Kathleen_Hablutzel_Resume.pdf">here</a>.</p>
+<p><br></p>
+<p><br></p>
+<div id="skills-interests" class="section level2">
+<h2>Skills &amp; Interests</h2>
+<p><strong>Programming:</strong> Python, R, Java, SQL, JavaScript, MATLAB</p>
+<p><strong>Tools:</strong> Git/GitHub, HTML5/CSS, Tableau, Gephi, ArcGIS, LaTeX, Adobe InDesign</p>
+<p><br></p>
+<p><br></p>
+</div>
 <div id="experience" class="section level2">
 <h2>Experience</h2>
 <p><br></p>
-<div id="stride-research-program" class="section level3">
-<h3>STRIDE Research Program</h3>
-<div id="software-engineering-research-assistant" class="section level4">
-<h4>Software Engineering Research Assistant</h4>
+<div id="software-engineering-research-assistant" class="section level3">
+<h3>Software Engineering Research Assistant</h3>
+<div id="stride-research-program" class="section level4">
+<h4>STRIDE Research Program</h4>
 <div id="sept.-2020-present-northampton-ma" class="section level5">
 <h5><em>Sept. 2020 – Present</em>, Northampton, MA</h5>
 <ul>
 <li>Refactor model management features in web-based requirements engineering goal modeling tool, <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>, using Java, JavaScript, JQuery, JSON, and HTML/CSS</li>
 <li>Internship in the Grubb Software Engineering Lab</li>
 </ul>
+<p><br></p>
 </div>
 </div>
-<div id="algorithms-teaching-assistant" class="section level4">
-<h4>Algorithms Teaching Assistant</h4>
+</div>
+<div id="algorithms-teaching-assistant" class="section level3">
+<h3>Algorithms Teaching Assistant</h3>
 <div id="feb.-2021-present-northampton-ma" class="section level5">
 <h5><em>Feb. 2021 — Present</em>, Northampton, MA</h5>
 <ul>
 <li>Tutor students in theory and implementation of common algorithms and algorithmic design techniques</li>
 </ul>
+<p><br></p>
 </div>
 </div>
-</div>
-<div id="stride-research-program-1" class="section level3">
-<h3>STRIDE Research Program</h3>
-<div id="data-science-policy-research-assistant" class="section level4">
-<h4>Data Science Policy Research Assistant</h4>
-<div id="sept.-2019-sept.-2020-northampton-ma" class="section level5">
-<h5><em>Sept. 2019 – Sept. 2020</em>, Northampton, MA</h5>
-<ul>
-<li>Explored the history and politics of data science and tech industry, with a particular focus on the relationship between data and power, under Professor Brent Durbin</li>
-<li>Investigated use of facial recognition systems for data-driven surveillance, with a focus on China and the US</li>
-</ul>
-</div>
-</div>
-</div>
-<div id="bluebonnet-data" class="section level3">
-<h3>Bluebonnet Data</h3>
-<div id="data-fellow-cynthia-wallace-for-congress" class="section level4">
-<h4>Data Fellow, Cynthia Wallace for Congress</h4>
+<div id="data-fellow-cynthia-wallace-for-congress" class="section level3">
+<h3>Data Fellow, Cynthia Wallace for Congress</h3>
+<div id="bluebonnet-data" class="section level4">
+<h4>Bluebonnet Data</h4>
 <div id="june-november-2020-charlotte-nc" class="section level5">
 <h5><em>June – November 2020</em>, Charlotte, NC</h5>
 <ul>
@@ -374,14 +375,30 @@ $(document).ready(function () {
 <li>Visualized demographic trends in the district using the ggplot2, sf, and leaflet packages in R</li>
 </ul>
 <p><br></p>
+</div>
+</div>
+</div>
+<div id="data-science-policy-research-assistant" class="section level3">
+<h3>Data Science Policy Research Assistant</h3>
+<div id="stride-research-program-1" class="section level4">
+<h4>STRIDE Research Program</h4>
+<div id="sept.-2019-sept.-2020-northampton-ma" class="section level5">
+<h5><em>Sept. 2019 – Sept. 2020</em>, Northampton, MA</h5>
+<ul>
+<li>Explored the history and politics of data science and tech industry, with a particular focus on the relationship between data and power, under Professor Brent Durbin</li>
+<li>Investigated use of facial recognition systems for data-driven surveillance, with a focus on China and the US</li>
+</ul>
 <p><br></p>
 </div>
 </div>
 </div>
-<div id="summer-research-innovation-program" class="section level3">
-<h3>Summer Research &amp; Innovation Program</h3>
-<div id="program-assistant-north-carolina-school-of-science-and-mathematics" class="section level4">
-<h4>Program Assistant (North Carolina School of Science and Mathematics)</h4>
+<div id="program-assistant" class="section level3">
+<h3>Program Assistant</h3>
+<div id="summer-research-innovation-program" class="section level4">
+<h4>Summer Research &amp; Innovation Program</h4>
+</div>
+<div id="north-carolina-school-of-science-and-mathematics" class="section level4">
+<h4>North Carolina School of Science and Mathematics</h4>
 <div id="june-aug.-2018-2019-2020-durham-nc-north-carolina-school-of-science-and-mathematics" class="section level5">
 <h5><em>June – Aug. 2018, 2019, 2020</em>, Durham, NC (North Carolina School of Science and Mathematics)</h5>
 <ul>
@@ -407,7 +424,7 @@ $(document).ready(function () {
 <li>4.0/4.0 GPA</li>
 <li><strong>Zollman Scholarship:</strong> Smith’s highest academic scholarship, awarded to fewer than 10 entering first-year students</li>
 <li><strong>STRIDE Research Program:</strong> Selective paid research assistant program, investigating data science policy</li>
-<li><strong>Relevant Coursework:</strong> Algorithms, Machine Learning, Communicating with Data, Data Structures, Theory of Computation, Digital History, Research Design and Analysis, Multiple Regression</li>
+<li><strong>Relevant Coursework:</strong> Algorithms, Machine Learning, Introduction to Data Science, Data Structures, Theory of Computation, Communicating with Data, Digital History, Research Design and Analysis, Multiple Regression, Linear Algebra</li>
 </ul>
 <p><br></p>
 </div>
@@ -424,6 +441,18 @@ $(document).ready(function () {
 <p><br></p>
 </div>
 </div>
+<div id="awards" class="section level2">
+<h2>Awards</h2>
+<ul>
+<li><strong>Honorable Mention</strong>, <a href="https://www.causeweb.org/usproc/usclap/2020/fall/winners">The Undergraduate Statistics Project Competition</a>, Intermediate Statistics</li>
+<li>Arthur Ellis Hamm Prize <strong>Winner</strong></li>
+<li>Smith College <strong>Dean’s List</strong> 2019-2020</li>
+<li><strong>Technical Computing Scholarship Award</strong>, <a href="https://m3challenge.siam.org/archives/2019/winning-solutions">MathWorks Math Modeling Challenge</a></li>
+<li><strong>Outstanding Winner</strong> and <strong>National Council of Teachers of Mathematics Winner</strong>, <a href="https://www.comap.com/highschool/contests/himcm/2018results.html">High School Mathematical Contest in Modeling</a></li>
+</ul>
+<p><br></p>
+<p><br></p>
+</div>
 <div id="activities-leadership" class="section level2">
 <h2>Activities &amp; Leadership</h2>
 <p><strong>Smithies in Statistical and Data Sciences Treasurer:</strong> Manage funds and organize department student/faculty lunches</p>
@@ -435,12 +464,9 @@ $(document).ready(function () {
 <p><br></p>
 <p><br></p>
 </div>
-<div id="skills-interests" class="section level2">
-<h2>Skills &amp; Interests</h2>
-<p><strong>Programming:</strong> Python, R, Java, SQL, JavaScript, MATLAB</p>
-<p><strong>Tools:</strong> Git/GitHub, HTML5/CSS, Tableau, Gephi, ArcGIS, LaTeX, Adobe InDesign</p>
-<p><strong>Interests:</strong> 16th Century British Politics, Cryptography, Theater</p>
-<p><strong>Awards:</strong> M3 Challenge Technical Computing Scholarship Award, High School Mathematical Contest in Modeling Outstanding Winner, Smith College Dean’s List, Arthur Ellis Hamm Prize Winner</p>
+<div id="other-interests" class="section level2">
+<h2>Other Interests</h2>
+<p>16th Century British Politics, Cryptography, Theater</p>
 </div>
 
 <div id="footer">
