clarifying name of competition

--- a/resume.html
+++ b/resume.html
@@ -444,7 +444,7 @@ $(document).ready(function () {
 <div id="awards" class="section level2">
 <h2>Awards</h2>
 <ul>
-<li><strong>Honorable Mention</strong>, <a href="https://www.causeweb.org/usproc/usclap/2020/fall/winners">The Undergraduate Statistics Project Competition</a>, Intermediate Statistics</li>
+<li><strong>Honorable Mention</strong>, <a href="https://www.causeweb.org/usproc/usclap/2020/fall/winners">2020 Fall Undergraduate Statistics Class Project Competition</a>, Intermediate Statistics</li>
 <li>Arthur Ellis Hamm Prize <strong>Winner</strong></li>
 <li>Smith College <strong>Dean’s List</strong> 2019-2020</li>
 <li><strong>Technical Computing Scholarship Award</strong>, <a href="https://m3challenge.siam.org/archives/2019/winning-solutions">MathWorks Math Modeling Challenge</a></li>
