--- a/resume.html
+++ b/resume.html
@@ -296,6 +296,12 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
+      <a href="https://krhablutzel.github.io/KnittingPatternGenerator/">Unconventional Knitting Project Generator</a>
+    </li>
+    <li>
+      <a href="https://github.com/comp-machine-learning-spring2021/portfolio-krhablutzel">Machine Learning Portfolio</a>
+    </li>
+    <li>
       <a href="https://github.com/amgrubb/BloomingLeaf">BloomingLeaf</a>
     </li>
     <li>
